--- a/tools/tagger/index.html
+++ b/tools/tagger/index.html
@@ -4,7 +4,7 @@
   Original tagging tool: https://github.com/adobe/blog/blob/main/tools/tagger/index.html
 -->
 <head>
-  <title>Merative - Tagger</title>
+  <title>LearningA-Z - Tagger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <script src="/tools/tagger/tagger.js" type="module"></script>
   <link rel="stylesheet" href="/tools/tagger/tagger.css"/>
