--- a/404.html
+++ b/404.html
@@ -31,6 +31,7 @@
     sampleRUM('404', { source: document.referrer });
   </script>
   <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/templates/errorpage/errorpage.css">
   <style>
     main.error {
       min-height: calc(100vh - var(--nav-height));
@@ -49,7 +50,7 @@
   <link rel="stylesheet" href="/styles/lazy-styles.css">
 </head>
 
-<body>
+<body class="errorpage">
   <header></header>
   <main class="error">
     <div>
