--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Page not found">
+  <meta name="template" content="errorpage">
   <script src="/scripts/scripts.js" type="module" crossorigin="use-credentials"></script>
   <script type="module">
     window.addEventListener('load', () => {
@@ -31,7 +32,6 @@
     sampleRUM('404', { source: document.referrer });
   </script>
   <link rel="stylesheet" href="/styles/styles.css">
-  <link rel="stylesheet" href="/templates/errorpage/errorpage.css">
   <style>
     main.error {
       min-height: calc(100vh - var(--nav-height));
