--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Page not found">
+  <meta name="template" content="errorpage">
   <script src="/scripts/scripts.js" type="module" crossorigin="use-credentials"></script>
   <script type="module">
     window.addEventListener('load', () => {
@@ -49,17 +50,16 @@
   <link rel="stylesheet" href="/styles/lazy-styles.css">
 </head>
 
-<body>
+<body class="errorpage">
   <header></header>
   <main class="error">
-    <div class="section">
-      <svg viewBox="1 0 38 18" class="error-number">
-        <text x="0" y="17">404</text>
-      </svg>
-      <h2 class="error-message">Page Not Found</h2>
-      <p class="button-container">
-        <a href="/" class="button secondary error-button-home">Go home</a>
-      </p>
+    <div>
+      <div class="fragment">
+        <div>path</div>
+        <div>
+          <a href="/fragments/404"></a>
+        </div>
+      </div>
     </div>
   </main>
   <footer></footer>
